--- a/client/app/modules/project/templates/project.tpl.html
+++ b/client/app/modules/project/templates/project.tpl.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-3 col-sm-4 col-xs-12">
+        <div class="col-md-3  col-xs-12">
             <!--Profile basic-->
             <div class="panel panel-default">
                 <div class="panel-body">
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </div>
-        <article class="col-md-9 col-sm-8 col-xs-12">
+        <article class="col-md-9 col-xs-12">
             <div ui-view="projectView">
 
             </div>
