--- a/client/app/modules/projectSetting/templates/media.tpl.html
+++ b/client/app/modules/projectSetting/templates/media.tpl.html
@@ -1,15 +1,19 @@
-<div class="container">
     <div class="row">
         <div class="col-md-6">
             <h3>File resources</h3>
             <table class="table table-striped mtl" >
                 <thead>
-                    <th>Name</th><th>Uploader</th><th>Remove</th>
+                    <th>Name</th><th>Uploader</th><th>Action</th>
                 </thead>
-                <tr ng-repeat="file in files track by $index">
+                <tr ng-repeat="file in files track by $index" tooltip-trigger="mouseenter"   tooltip-animation="true" tooltip="{{ file.description }}" tooltip-placement="right" tool>
                     <td>{{file.originalFilename}}</td>
                     <td><a ng-href="user/{{file.ownerid}}" target="_self">{{file.ownerName}}</a></td>
-                    <td><a class="btn btn-danger" ng-show="file.owner.id==me.id" ng-click="removeFile(file)" popover-trigger="mouseenter"  Popover-animation="true" popover="{{ file.description }}">Delete</a></td>
+                    <td>
+                        <i class="my-btn fa fa-ban fa-2x" ng-show="project.owner == me.id" ng-click="removeFile(file)"></i>
+                        <a ng-href="{{ file.url }}" target="_blank">
+                            <i class="fa fa-cloud-download fa-2x my-btn"></i>
+                        </a>
+                    </td>
                 </tr>
             </table>
         </div>
@@ -23,7 +27,3 @@
             </div>
         </div>
     </div>
-    <div class="row" >
-
-    </div>
-</div>
