--- a/client/app/styles/less/animate.less
+++ b/client/app/styles/less/animate.less
@@ -53,12 +53,12 @@
   border: none;
   .panel-body{
     &.ng-enter{
-      -webkit-animation: flipInX 0.5s;
-      animation : flipInX 0.5s;
+      -webkit-animation: fadeInDown 0.3s;
+      animation : fadeInDown 0.3s;
     }
     &.ng-leave{
-      -webkit-animation: flipOutX 0.5s;
-      animation : flipOutX 0.5s;
+      -webkit-animation: fadeOutUp 0.3s;
+      animation : fadeOutUp 0.3s;
     }
   }
 }
