--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -60,12 +60,12 @@
   border: none;
 }
 .panel-animated .panel-body.ng-enter {
-  -webkit-animation: flipInX 0.5s;
-  animation: flipInX 0.5s;
+  -webkit-animation: fadeInDown 0.3s;
+  animation: fadeInDown 0.3s;
 }
 .panel-animated .panel-body.ng-leave {
-  -webkit-animation: flipOutX 0.5s;
-  animation: flipOutX 0.5s;
+  -webkit-animation: fadeOutUp 0.3s;
+  animation: fadeOutUp 0.3s;
 }
 .edit-menu.ng-enter {
   -webkit-animation: fadeInDown 0.5s;
