add some text when no result

--- a/client/app/modules/message/templates/inbox.tpl.html
+++ b/client/app/modules/message/templates/inbox.tpl.html
@@ -5,4 +5,5 @@
         <br/>
         <i class=" my-btn fa fa-reply fa-2x" ng-click="reply(message.from)"></i>
     </article>
+    <div ng-hide="messages" class="alert alert-info">No message yet !</div>
 </section>
