--- a/client/app/modules/project/templates/projects.tpl.html
+++ b/client/app/modules/project/templates/projects.tpl.html
@@ -22,29 +22,7 @@
             </div>
         </li>
     </ul>
-
-    <!--<div class="col-sm-6 col-md-4" ng-repeat="project in projects | orderBy:orderProp:true track by $index">-->
-        <!--<div class="thumbnail" >-->
-            <!--<a ui-sref="project.details({ pid : project.accessUrl })">-->
-                <!--<img ng-src="{{project.poster}}" alt="..." class="img-rounded mbm" style="height:180px">-->
-                <!--<div class="caption center">-->
-                    <!--<h3>{{project.title}}</h3>-->
-                    <!--<p ng-bind-html="project.brief" class="thumb-project-brief"></p>-->
-                    <!--<div class="progress" >-->
-                        <!--<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{project.score}}" aria-valuemin="0" aria-valuemax="100" style="width: {{project.score}}%" tooltip="靠谱度：{{project.score}}%">-->
-                            <!--<span class="sr-only">{{project.score}}% Complete (success)</span>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<p>-->
-                        <!--<small style="color:#666">Last Updated：{{project.updateDate|timeago}}</small>-->
-                    <!--</p>-->
-                    <!--<p>-->
-                        <!--<small style="color:#666">Founded on：{{project.createDate|date}} </small>-->
-                    <!--</p>-->
-                <!--</div>-->
-            <!--</a>-->
-        <!--</div>-->
-    <!--</div>-->
+    <div ng-hide="projects" class="alert alert-info">{{'PROJECT_LIST_NORESULT'|translate}}</div>
     <button ng-show="projects.length>=4&&!isEnd" ng-click="loadMoreProjects(noPage)" class="btn  btn-default col-xs-12">Load more</button>
 </div>
 
