--- a/client/app/modules/user/templates/profile/brief.tpl.html
+++ b/client/app/modules/user/templates/profile/brief.tpl.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <p ng-bind-html="secureBrief" class="col-xs-12 col-md-9 edit-menu" ng-if="!briefEditable"></p>
-
+    <div ng-if="!secureBrief" class="col-md-offset-3 col-xs-12 col-md-9 edit-menu alert alert-info center">Here a presentation !</div>
     <div ng-if="briefEditable" class="edit-menu">
         <form class="form-horizontal">
             <div class="form-group">
@@ -35,6 +35,7 @@
     </div>
     <div class="row">
         <div ng-bind-html="securePresentation" ng-if="!prezEditable" class="edit-menu"></div>
+        <div ng-if="!securePresentation" class="alert alert-info center">Here some embeded content from youtube or slideshow !</div>
         <form class="form-horizontal" ng-if="prezEditable">
             <div class="form-group">
                 <div class="col-xs-12">
