--- a/client/app/modules/challenge/templates/challenge-project-list.tpl.html
+++ b/client/app/modules/challenge/templates/challenge-project-list.tpl.html
@@ -1,17 +1,10 @@
 <section class="row">
-    <div class="col-xs-6">
-        <div class="input-group">
-            <input type="search" class="form-control" ng-model="searchProject" id="searchField" placeholder="e.g:Innovation">
-            <span class="input-group-addon" ng-click="queryProject()"><i class="fa fa-search fa-fw"></i></span>
-        </div>
-    </div>
-    <div class="col-xs-3">
-        <!-- sort by-->
-        <select class="form-control" ng-model="sortBy" ng-change="changeSort()">
-            <option value="0">Fly degrees</option>
-            <option value="1" >Latest updates</option>
-            <option value="2" >Created</option>
-        </select>
+    <div class="pull-right" >
+        <span ng-show="filterMode" class="filter-input ">
+            <input type="search"  ng-model="search.title"/>
+        </span>
+        <i class="fa fa-search fa-2x my-btn" tooltip="filter by title" ng-click="enableFilterMode()"></i>
+        <i class="fa fa-plus fa-2x my-btn" tooltip="Suggest a project" ui-sref="challenge.projectCreation"  ng-if="me"></i>
     </div>
 </section>
 <section class="row" style="margin-top: 20px;">
@@ -33,6 +26,7 @@
                 </div>
             </li>
         </ul>
+        <div ng-hide="challenges" class="alert alert-info">no project yet</div>
         <button ng-show="projects.length>=4&&!isEnd" ng-click="loadMoreProjects(noPage)" class="btn  btn-default col-xs-12">Load more</button>
     </section>
 </section>
