--- a/client/app/modules/projectSetting/templates/poster.tpl.html
+++ b/client/app/modules/projectSetting/templates/poster.tpl.html
@@ -1,17 +1,10 @@
-    <div class="col-md-6">
-        <h3 class="center">Actual poster</h3>
-        <div class="center">
-            <img ng-src="{{ project.poster }}" width="300" height="300"  alt="project's poster"/>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <h3 class="center">New poster</h3>
-        <image-crop
-                data-width="300"
-                data-height="300"
-                data-shape="circle"
-                data-step="imageCropStep"
-                data-result="imageCropResult"
-                ng-show="showImageCropper">
-        </image-crop>
-    </div>
+<section ng-controller="ProjectPosterCtrl">
+    <image-crop
+            data-width="300"
+            data-height="300"
+            data-shape="circle"
+            data-step="imageCropStep"
+            data-result="imageCropResult"
+            ng-show="showImageCropper">
+    </image-crop>
+</section>
