homepage changed :   carousel with most popular challenge on top

--- a/client/app/modules/challengeSettings/templates/basic.tpl.html
+++ b/client/app/modules/challengeSettings/templates/basic.tpl.html
@@ -32,7 +32,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10 col-xs-12">
-                                <button type="submit" class="btn btn-success" ng-disabled="project.$invalid"  ng-click="updateProject()">Publish</button>
+                                <button type="submit" class="btn btn-success" ng-disabled="project.$invalid"  ng-click="updateChallenge()">Publish</button>
                             </div>
                         </div>
                     </form>
