--- a/client/app/modules/challengeSettings/templates/poster.tpl.html
+++ b/client/app/modules/challengeSettings/templates/poster.tpl.html
@@ -1,19 +1,11 @@
-<div class="container">
-    <div class="col-md-6">
-        <h3 class="center">Actual poster</h3>
-        <div class="center">
-            <img ng-src="{{ challenge.poster }}" width="300" height="300"  alt="challenge's poster"/>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <h3 class="center">New poster</h3>
-        <image-crop
-                data-width="300"
-                data-height="300"
-                data-shape="circle"
-                data-step="imageCropStep"
-                data-result="imageCropResult"
-                ng-show="showImageCropper">
-        </image-crop>
-    </div>
+<div>
+    <h3 class="center">New poster</h3>
+    <image-crop
+            data-width="1000"
+            data-height="500"
+            data-shape="square"
+            data-step="imageCropStep"
+            data-result="imageCropResult"
+            ng-show="showImageCropper">
+    </image-crop>
 </div>
