--- a/client/app/styles/less/home.css
+++ b/client/app/styles/less/home.css
@@ -71,3 +71,13 @@ body {
 .home-map .angular-google-map-container {
   height: 400px;
 }
+.list-carousel-challenge {
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.carousel-brief {
+  color: white;
+  width: 75%;
+  margin: auto;
+}
