--- a/client/app/styles/less/home.less
+++ b/client/app/styles/less/home.less
@@ -80,3 +80,20 @@ html, body {
     height: 400px;
   }
 }
+.list-carousel-challenge{
+//  -webkit-filter: blur(5px); -moz-filter: blur(5px); -ms-filter: blur(5px); -o-filter: blur(5px); filter: blur(5px);
+  width : 100%;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+//  background-position: top left;
+}
+
+.center-vertical{
+//  line-height:5em;
+}
+
+.carousel-brief{
+  color : white;
+  width:75%;
+  margin:auto;
+}
