--- a/client/app/modules/header/templates/header.tpl.html
+++ b/client/app/modules/header/templates/header.tpl.html
@@ -5,7 +5,7 @@
             <button class="navbar-toggle navbar-toggle-icon" ng-init="isNavCollapsed = true" ng-click="isNavCollapsed = !isNavCollapsed">
                 <i class="fa fa-cogs fa-2x" style="color : white;"></i>
             </button>
-            <a ui-sref="home" class="navbar-brand" style="font-size: 2em;color: #f8f8f8;" >{{'TITLE'|translate}} </a>
+            <a ui-sref="home.signup" class="navbar-brand" style="font-size: 2em;color: #f8f8f8;" >{{'TITLE'|translate}} </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div collapse="isNavCollapsed" class="navbar-collapse" >
