--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -1,10 +1,4 @@
 <!-- first section - Home -->
-<!--<div id="home" class="home" >
-    <div class="text-vcenter">
-        <h1>IdeaStorm</h1>
-        <h3>This is bootstrap-based layout</h3>
-    </div>
-</div>-->
 <div>
     <ul rn-carousel rn-carousel-indicator="" style="width:100%; height:500px;">
         <li class="list-carousel-challenge" ng-repeat="challenge in challenges" ng-style="{backgroundImage : 'url(' + challenge.poster + ')', position : 'relative'}">
@@ -15,6 +9,7 @@
                 <p class="carousel-brief"  ng-bind-html="challenge.brief">
                 </p>
                 <div showtags="" entity="challenge" style="position:absolute; bottom : 10px; right:50px;"></div>
+                <a class="btn btn-default btn-block" href="#login">Join us</a>
             </article>
         </li>
     </ul>
@@ -45,33 +40,42 @@
 </div>
 
 <div id="information" class="pad-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="panel panel-default" style="height:400px;">
-                    <div class="panel-heading">
-                        <h2 class="panel-title">Recent challenges</h2>
-                    </div>
-                    <div class="panel-body lead">
-                        <div class="list-group">
-                            <a ng-repeat="myChallenge in challenges" class="list-group-item" ui-sref="challenge.details({ pid : myChallenge.accessUrl })" ng-bind="myChallenge.title"></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="panel panel-default" style="height:400px;" >
-                    <div class="panel-heading">
-                        <h2 class="panel-title">Recent Projects</h2>
-                    </div>
-                    <div class="panel-body lead">
-                        <div class="list-group">
-                            <a ng-repeat="myProject in projects" class="list-group-item" ui-sref="project.details({ pid : myProject.accessUrl })" ng-bind="myProject.title"></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <!--<div class="container">-->
+        <!--<div class="row">-->
+            <!--<div class="col-md-6">-->
+                <!--<div class="panel panel-default" style="height:400px;">-->
+                    <!--<div class="panel-heading">-->
+                        <!--<h2 class="panel-title">Recent challenges</h2>-->
+                    <!--</div>-->
+                    <!--<div class="panel-body lead">-->
+                        <!--<div class="list-group">-->
+                            <!--<a ng-repeat="myChallenge in challenges" class="list-group-item" ui-sref="challenge.details({ pid : myChallenge.accessUrl })" ng-bind="myChallenge.title"></a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-md-6">-->
+                <!--<div class="panel panel-default" style="height:400px;" >-->
+                    <!--<div class="panel-heading">-->
+                        <!--<h2 class="panel-title">Recent Projects</h2>-->
+                    <!--</div>-->
+                    <!--<div class="panel-body lead">-->
+                        <!--<div class="list-group">-->
+                            <!--<a ng-repeat="myProject in projects" class="list-group-item" ui-sref="project.details({ pid : myProject.accessUrl })" ng-bind="myProject.title"></a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+    <article ng-repeat="project in projects" class="col-xs-12 col-sm-3">
+        <img ng-src="" alt="" width="100%"/>
+        <h1 ng-bind="project.title"></h1>
+    </article>
+    <div id="login" class="container" >
+       <div ui-view="loginView">
+
+       </div>
     </div>
     <div class="row">
         <div class="col-md-12" >
