--- a/client/app/styles/less/animate.css
+++ b/client/app/styles/less/animate.css
@@ -11,7 +11,8 @@
   -webkit-animation: fadeInDown 0.5s;
   animation: fadeInDown 0.5s;
 }
-[ui-view="challengeView"].ng-enter {
+[ui-view="challengeView"].ng-enter,
+[ui-view="loginView"].ng-enter {
   -webkit-animation: slideInRight 0.5s;
   animation: slideInRight 0.5s;
 }
