--- a/client/app/styles/less/animate.less
+++ b/client/app/styles/less/animate.less
@@ -20,7 +20,7 @@
 //  }
 }
 
-[ui-view="challengeView"] {
+[ui-view="challengeView"], [ui-view="loginView"] {
   &.ng-enter{
     -webkit-animation: slideInRight 0.5s;
     animation: slideInRight 0.5s;
