--- a/client/app/styles/less/home.less
+++ b/client/app/styles/less/home.less
@@ -101,3 +101,15 @@ html, body {
 .login{
   background-color: rgba(194, 196, 189, 0.8);
 }
+
+.home-project-container{
+  margin-top : 20px;
+  margin-bottom: 20px;
+}
+
+.home-project{
+  background-color: rgba(194, 196, 189, 0.8);
+  height: 400px;
+  margin-right: 10px;
+  margin-left : 5px;
+}
