--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -468,6 +468,16 @@ body {
 .login {
   background-color: rgba(194, 196, 189, 0.8);
 }
+.home-project-container {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.home-project {
+  background-color: rgba(194, 196, 189, 0.8);
+  height: 400px;
+  margin-right: 10px;
+  margin-left: 5px;
+}
 .owner-topic {
   background: #b2c9bc;
 }
