notification finally work fine, they were a huge horrible thing server side

--- a/client/app/modules/header/templates/header.tpl.html
+++ b/client/app/modules/header/templates/header.tpl.html
@@ -66,8 +66,8 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
-                                        <i class="fa fa-user" ui-sref="userSettings"></i>
+                                    <a href="" ui-sref="profile.settings.basic({ uid : me.profile.id })">
+                                        <i class="fa fa-user" ></i>
                                         &nbsp Personnal
                                     </a>
                                 </li>
