--- a/client/app/modules/header/templates/notifications.tpl.html
+++ b/client/app/modules/header/templates/notifications.tpl.html
@@ -4,75 +4,50 @@
 </div>
 <div ng-if="!activities" class="alert alert-info center ">no activity yet, get involved !</div>
 <ul class="list-group"  ng-show="activities" style="color : black; font-size:1.2em;">
-    <li ng-repeat="activity in activities" class="media">
-        <div ng-switch="activity.action">
-            <div ng-switch-when="createProject">
-
-                <div owner-block="activity.owner" class="pull-left">
-                </div>
-                <article class=" center">
-                    propose a project :
-                    <span project-info='activity.entity'></span>
-                </article>
-                <div class="pull-right " >
-                    {{activity.createDate|timeago}}
-                </div>
-            </div>
-            <div ng-switch-when="createPtopic">
-                <a href="" ui-sref="project.topic" class="list-group-item">
-                    <div owner-block="activity.owner" class="pull-left"></div>
-                    <article class="center" >
-                        propose a topic：
-
-                        {{activity.entity.title}}
-
-                        from
-                        <div project-info='activity.container'></div>
-                    </article>
-                    <span class="pull-right" style="font-size:0.6em;">
-                        {{activity.createDate|timeago}}
-                    </span>
-                </a>
-
-            </div>
-            <div ng-switch-when="createPlink">
-                <div owner-block="activity.owner" class="pull-left"></div>
-                {{activity.createDate|timeago}} Idea：
-                <div project-info='activity.container'></div>
-                Add a link to participate：
-                <a href="{{activity.entity.link}}" target="_blank">
-                    {{activity.entity.title}}
-                </a>
-            </div>
-            <div ng-switch-when="commentPtopic">
-                <div owner-block="activity.owner" class="pull-left"></div>
-                Add a comment on {{activity.container.title}} ：
-                <span>{{activity.entity.text}}</span>
-                from :
-                <div project-info='activity.container.container'></div>
-                <div class="pull-right">
-                    {{activity.createDate|timeago}}
-                </div>
-            </div>
-            <div ng-switch-when="followProject">
-                <div owner-block="activity.owner" class="pull-left"></div>
-                 follow project
-                <div project-info='activity.entity' class="inline"></div>
-                <div class="pull-right">
-                    {{activity.createDate|timeago}}
-                </div>
-            </div>
-            <div ng-switch-when="followChallenge">
-                <div owner-block="activity.owner" class="pull-left"></div>
-                follow challenge
-                <div challenge-info='activity.entity' class="inline"></div>
-                <div class="pull-right">
-                    {{activity.createDate|timeago}}
-                </div>
-            </div>
+    <li ng-repeat="activity in activities" class="list-group-item" style="height:100px !important;overflow-y : auto;">
+        <div owner-block="activity.owner" class="pull-left">
         </div>
+        <article class=" center" ng-if="activity.action == 'createProject'">
+            propose a project :
+            <span project-info='activity.entity'></span>
+        </article>
+        <article class="center" ng-if="activity.action=='createPtopic'">
+            propose a topic：
+            {{activity.entity.title}}
+            from
+            <div project-info='activity.container'></div>
+        </article>
+        <article class="center" ng-if="activity.action=='commentPtopic'">
+            Add a comment on {{activity.container.title}} ：
+            <span>{{activity.entity.text}}</span>
+            from :
+            <div project-info='activity.container.container'></div>
+        </article>
+        <article class="center" ng-if="activity.action=='followProject'">
+            follow project
+            <div project-info='activity.entity' class="inline"></div>
+        </article>
+        <article class="center" ng-if="activity.action=='followChallenge'">
+            follow challenge
+            <div challenge-info='activity.entity' class="inline"></div>
+        </article>
+        <div class="pull-right text-muted" >
+            {{activity.createDate|timeago}}
+        </div>
+            <!--<div ng-switch-when="createPlink">-->
+                <!--<div owner-block="activity.owner" class="pull-left"></div>-->
+                <!--{{activity.createDate|timeago}} Idea：-->
+                <!--<div project-info='activity.container'></div>-->
+                <!--Add a link to participate：-->
+                <!--<a href="{{activity.entity.link}}" target="_blank">-->
+                    <!--{{activity.entity.title}}-->
+                <!--</a>-->
+            <!--</div>-->
+
+
+
     </li>
-    <li>
+    <li class="list-group-item">
         <button ng-show="activities.length>=10&&!isEnd" ng-click="loadMoreActivities(noPage)" class="btn  btn-default col-xs-12">
             Load More
         </button>
