--- a/client/app/modules/user/templates/setting.tpl.html
+++ b/client/app/modules/user/templates/setting.tpl.html
@@ -1,18 +1,11 @@
-<div class="container">
-    <div class="row">
-        <ul class="nav nav-tabs">
-            <li ui-route="/user/{{ profile.id }}/settings/basic" ng-class="{active: $uiRoute}">
-                <a ui-sref="userSettings.basic">{{'USERSET_TPL_BASIC'|translate}}</a>
-            </li>
-            <li ui-route="/user/{{ profile.id }}/settings/password" ng-class="{active: $uiRoute}">
-                <a ui-sref="userSettings.pass">{{'USERSET_TPL_PASS'|translate}}</a>
-            </li>
-            <li ui-route="/user/{{ profile.id }}/settings/notify" ng-class="{active: $uiRoute}">
-                <a ui-sref="userSettings.notify">{{'USERSET_TPL_NOTIFY'|translate}}</a>
-            </li>
-        </ul>
-    </div>
-    <div class="row" ui-view="settingView">
+<material-tabs selected="selectedTabIndex" class="material-theme-light-blue">
+    <material-tab ui-sref="profile.settings.basic({ uid : me.id})" label="<i class='fa fa-list fa-2x'></i>" class="material-theme-light-blue">
+    </material-tab>
+    <material-tab ui-sref="profile.settings.notify({ uid : me.id})" label="<i class='fa fa-users fa-2x'></i>" class="material-theme-light-blue">
+    </material-tab>
+</material-tabs>
 
-    </div>
+<div ui-view="settingView">
+
 </div>
+
