new profile page new route on the data event to get all profile data with one http call

--- a/client/app/modules/account/templates/signin.tpl.html
+++ b/client/app/modules/account/templates/signin.tpl.html
@@ -1,6 +1,6 @@
 <div style="margin-top:20px;margin-bottom: 20px;">
     <img src="images/svg/login.svg" alt="LogIn"/>
-    <i class="fa fa-arrow-right fa-2x my-btn pull-right" style="color:black;" ng-click="toggleLogin()"></i>
+    <i class="fa fa-arrow-right fa-2x my-btn pull-right" style="color:black;" ng-click="toggleRight('signin')"></i>
 </div>
 <div ng-controller="LoginCtrl">
     <form class="signin-form">
