--- a/client/app/styles/less/common.css
+++ b/client/app/styles/less/common.css
@@ -3,12 +3,20 @@ html {
   height: 100%;
   max-width: 100%;
   overflow-x: hidden;
-}
-body {
-  font-family: 'Abel', sans-serif;
+  font-family: helvetica, sans-serif;
 }
 textarea {
   resize: none;
+}
+.main-header {
+  border-bottom: #2e2d30 solid 1 px;
+}
+.main-header .my-grey,
+.main-header .fa {
+  color: #2e2d30;
+}
+.main-header .my-yellow {
+  color: #f5e618;
 }
 material-content {
   padding: 0px ;
