--- a/client/app/styles/less/variables.less
+++ b/client/app/styles/less/variables.less
@@ -10,3 +10,7 @@
 @opacityTiming : 0.5s;
 @opacityIndex : 0.2;
 @opacityIndexHover : 0.9;
+
+
+@headerGrey : rgb(46,45,48);
+@headerYellow : rgb(245,230,24);
