--- a/client/app/modules/header/templates/notifications.tpl.html
+++ b/client/app/modules/header/templates/notifications.tpl.html
@@ -1,8 +1,8 @@
-<div style="margin-top:20px;margin-bottom: 20px;">
-    <img src="images/svg/Notifications.svg" alt="notification"/>
-    <i class="fa fa-arrow-right fa-2x my-btn pull-right" style="color:black;" ng-click="toggleNotif()"></i>
-</div>
-<div ng-if="!activities" class="alert alert-info center ">no activity yet, get involved !</div>
+<!--<div style="margin-top:20px;margin-bottom: 20px;">-->
+    <!--<img src="images/svg/Notifications.svg" alt="notification"/>-->
+    <!--<i class="fa fa-arrow-right fa-2x my-btn pull-right" style="color:black;" ng-click="toggleNotif()"></i>-->
+<!--</div>-->
+<div ng-if="!activities" class="alert alert-info">no activity yet, get involved !</div>
 <ul class="list-group"  ng-show="activities" style="color : black; font-size:1.2em;">
     <li ng-repeat="activity in activities" class="list-group-item" style="height:100px !important;overflow-y : auto;">
         <div owner-block="activity.owner" class="pull-left">
@@ -48,129 +48,11 @@
 
     </li>
     <li class="list-group-item">
-        <button ng-show="activities.length>=10&&!isEnd" ng-click="loadMoreActivities(noPage)" class="btn  btn-default col-xs-12">
+        <button ng-show="activities.length>=10&&!isEnd" ng-click="loadMoreActivities(noPage)" class="btn  btn-default ">
             Load More
         </button>
         <div ng-hide="activities" class="alert alert-info">Noting yet</div>
         <div ng-show="isEnd&&activities.length>=10"  class="alert alert-info">The end !</div>
     </li>
 </ul>
-
-
-
-<!--<ul  class="list-unstyled">-->
-<!--<material-list ng-show="activities">-->
-    <!--<material-item ng-repeat="activity in activities">-->
-        <!--<div ng-switch="activity.action">-->
-            <!--<div ng-switch-when="createProject">-->
-                <!--<div class="material-tile-left">-->
-                    <!--<div owner-block="activity.owner"></div>-->
-                <!--</div>-->
-                <!--<div class="material-tile-content">-->
-                        <!--<span class="mln">-->
-                            <!--{{user[activity.owner].username}}-->
-                        <!--</span>-->
-                    <!--<div project-info='activity.entity'></div>-->
-                <!--</div>-->
-                <!--<div class="material-tile-right">-->
-                    <!--{{activity.createDate|timeago}}-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div ng-switch-when="createPtopic">-->
-                <!--<div class="material-tile-left">-->
-                    <!--<div owner-block="activity.owner"></div>-->
-                <!--</div>-->
-                <!--<div class="material-tile-content">-->
-                        <!--<span class="mlm">-->
-                        <!--{{user[activity.owner].username}}-->
-                        <!--</span>-->
-
-                    <!--<div project-info='activity.container'></div>-->
-                    <!--Add a topic：-->
-                        <!--<span>-->
-                            <!--{{activity.entity.title}}-->
-                        <!--</span>-->
-                <!--</div>-->
-                <!--<div class="material-tile-right">-->
-                    <!--{{activity.createDate|timeago}}-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div ng-switch-when="createPlink">-->
-                <!--<div class="material-tile-left">-->
-                    <!--<div owner-block="activity.owner"></div>-->
-                <!--</div>-->
-                <!--<div class="material-tile-content">-->
-                        <!--<span class="mlm">-->
-                            <!--{{user[activity.owner].username}}-->
-                        <!--</span>-->
-                    <!--<div project-info='activity.container'></div>-->
-                    <!--Add a link to participate：-->
-                    <!--<a href="{{activity.entity.link}}" target="_blank">-->
-                        <!--{{activity.entity.title}}-->
-                    <!--</a>-->
-                <!--</div>-->
-                <!--<div class="material-tile-right">-->
-                    <!--{{activity.createDate|timeago}}-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div ng-switch-when="commentPtopic">-->
-                <!--<div class="material-tile-left">-->
-                    <!--<div owner-block="activity.owner"></div>-->
-                <!--</div>-->
-                <!--<div class="material-tile-content">-->
-                        <!--<span class="mlm">-->
-                            <!--{{user[activity.owner].username}}-->
-                        <!--</span>-->
-                    <!--<div project-info='activity.container.container'></div>-->
-                    <!--The topic：-->
-                    <!--<a href="/project/{{activity.container.container}}" target="_blank">-->
-                        <!--{{activity.container.title}}</a>Add a comment：-->
-                    <!--<span>{{activity.entity.text}}</span>-->
-                <!--</div>-->
-                <!--<div class="material-tile-right">-->
-                    <!--{{activity.createDate|timeago}}-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div ng-switch-when="followProject">-->
-                <!--<div class="material-tile-left">-->
-                    <!--<div owner-block="activity.owner"></div>-->
-                <!--</div>-->
-                <!--<div class="material-tile-content">-->
-                        <!--<span class="mlm">-->
-                            <!--{{user[activity.owner].username}}-->
-                        <!--</span>-->
-                    <!--<div project-info='activity.entity' class="inline"></div>-->
-                <!--</div>-->
-                <!--<div class="material-tile-right">-->
-                    <!--{{activity.createDate|timeago}}-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div ng-switch-when="followChallenge">-->
-                <!--<div class="material-tile-left">-->
-                    <!--<div owner-block="activity.owner"></div>-->
-                <!--</div>-->
-                <!--<div class="material-tile-content">-->
-                        <!--<span class="mlm">-->
-                            <!--{{user[activity.owner].username}}-->
-                        <!--</span>-->
-                    <!--<div challenge-info='activity.entity' class="inline"></div>-->
-                <!--</div>-->
-                <!--<div class="material-tile-right">-->
-                    <!--{{activity.createDate|timeago}}-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</material-item>-->
-<!--</material-list>-->
-
-
-<!--<button ng-show="activities.length>=10&&!isEnd" ng-click="loadMoreActivities(noPage)" class="btn  btn-default col-xs-12">-->
-    <!--Load More-->
-<!--</button>-->
-<!--<div ng-hide="activities" class="alert alert-info">-->
-    <!--no activity yet, get involved !-->
-<!--</div>-->
-<!--<div ng-show="isEnd&&activities.length>=10"  class="alert alert-info">-->
-    <!--The end !-->
-<!--</div>-->
 
