--- a/client/app/styles/less/home.css
+++ b/client/app/styles/less/home.css
@@ -12,6 +12,7 @@ body {
 }
 material-card {
   height: 450px;
+  background-color: white !important;
 }
 /* vertical-centered text */
 .text-vcenter {
@@ -27,10 +28,6 @@ material-card {
 }
 /* additional sections */
 .service-image {
-  background-image: url(../images/idea.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   display: table;
   position: relative;
   width: 100%;
