--- a/client/app/styles/less/home.less
+++ b/client/app/styles/less/home.less
@@ -15,6 +15,7 @@ html, body {
 
 material-card{
   height : 450px;
+  background-color : white !important;
 }
 
 /* vertical-centered text */
@@ -32,10 +33,7 @@ material-card{
 
 /* additional sections */
 .service-image {
-  background-image: url(../images/idea.jpg);
-  background-position : center center;
-  background-repeat : no-repeat;
-  background-attachment: fixed;
+
   display: table;
   position: relative;
   width: 100%;
